{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 36,
  "lineage": "960dd548-0596-3116-aad1-890a233d1cd2",
  "resources": [
    {
      "module": "module.simple_network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "vpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:route-table/rtb-0ce0b3675392af603",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-02e1b90d691bf4c5c",
                "route_table_id": "rtb-0ce0b3675392af603",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0ce0b3675392af603",
            "owner_id": "215534817852",
            "route_table_id": "rtb-0ce0b3675392af603",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-036fff4b9c0237c1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e6f87a47903347c",
            "arn": "arn:aws:ec2:us-east-1:215534817852:instance/i-080537453e4be3f1d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080537453e4be3f1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-host-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02616007d4af60e70",
            "private_dns": "ip-10-100-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.195",
            "public_ip": "34.204.60.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07102a0b49a261ae4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec598b29297a4f91",
            "tags": {
              "Name": "bastion-Host"
            },
            "tags_all": {
              "Name": "bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0405995f67d1e2c64"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_security_group.bastion-sg",
            "module.simple_network.aws_subnet.s-pbs",
            "module.simple_network.aws_vpc.s-p2",
            "module.simple_network.data.aws_key_pair.s-kp"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e6f87a47903347c",
            "arn": "arn:aws:ec2:us-east-1:215534817852:instance/i-0ee5a8a8fe3e036c1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee5a8a8fe3e036c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-host-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c13436b62eac00d",
            "private_dns": "ip-10-100-0-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.0.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d57ecf6ed80e34c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090f1488d3daebe2b",
            "tags": {
              "Name": "sql"
            },
            "tags_all": {
              "Name": "sql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba8b1dca32f88beb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_security_group.sql-sg",
            "module.simple_network.aws_subnet.s-prs",
            "module.simple_network.aws_vpc.s-p2",
            "module.simple_network.data.aws_key_pair.s-kp"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "s-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:internet-gateway/igw-0382de2c0aecd511d",
            "id": "igw-0382de2c0aecd511d",
            "owner_id": "215534817852",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-036fff4b9c0237c1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0382de2c0aecd511d",
            "id": "r-rtb-0ce0b3675392af6031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce0b3675392af603",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_internet_gateway.s-igw",
            "module.simple_network.aws_vpc.s-p2",
            "module.simple_network.data.aws_route_table.vpc-route-table"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:security-group/sg-0405995f67d1e2c64",
            "description": "Allow SSH inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0405995f67d1e2c64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-bas",
            "name_prefix": "",
            "owner_id": "215534817852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh-bas"
            },
            "tags_all": {
              "Name": "allow_ssh-bas"
            },
            "timeouts": null,
            "vpc_id": "vpc-036fff4b9c0237c1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:security-group/sg-0ba8b1dca32f88beb",
            "description": "Allow SSH inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba8b1dca32f88beb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0405995f67d1e2c64"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-sql",
            "name_prefix": "",
            "owner_id": "215534817852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh-sql"
            },
            "tags_all": {
              "Name": "allow_ssh-sql"
            },
            "timeouts": null,
            "vpc_id": "vpc-036fff4b9c0237c1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s-pbs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:subnet/subnet-0ec598b29297a4f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec598b29297a4f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "215534817852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-036fff4b9c0237c1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s-prs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:subnet/subnet-090f1488d3daebe2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090f1488d3daebe2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215534817852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-036fff4b9c0237c1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "s-p2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:vpc/vpc-036fff4b9c0237c1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/20",
            "default_network_acl_id": "acl-0bccc46fdad2cc7c3",
            "default_route_table_id": "rtb-0ce0b3675392af603",
            "default_security_group_id": "sg-059864bcbe868a02d",
            "dhcp_options_id": "dopt-0e44f88483abf213d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036fff4b9c0237c1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce0b3675392af603",
            "owner_id": "215534817852",
            "tags": {
              "Name": "sahaba-vpc"
            },
            "tags_all": {
              "Name": "sahaba-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:security-group-rule/sgr-0e0a7be42c93f55a8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e0a7be42c93f55a8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0405995f67d1e2c64",
            "security_group_rule_id": "sgr-0e0a7be42c93f55a8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_security_group.bastion-sg",
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-sql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:security-group-rule/sgr-03621045605752059",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03621045605752059",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ba8b1dca32f88beb",
            "security_group_rule_id": "sgr-03621045605752059",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_security_group.sql-sg",
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:security-group-rule/sgr-0eac03712313f1257",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0eac03712313f1257",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0405995f67d1e2c64",
            "security_group_rule_id": "sgr-0eac03712313f1257",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_security_group.bastion-sg",
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    },
    {
      "module": "module.simple_network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-sql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215534817852:security-group-rule/sgr-09a2eba9d2afaff61",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09a2eba9d2afaff61",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0405995f67d1e2c64",
            "security_group_id": "sg-0ba8b1dca32f88beb",
            "security_group_rule_id": "sgr-09a2eba9d2afaff61",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.simple_network.aws_security_group.bastion-sg",
            "module.simple_network.aws_security_group.sql-sg",
            "module.simple_network.aws_vpc.s-p2"
          ]
        }
      ]
    }
  ]
}